[tool.poetry]
name = "proyecto-final-programacion"
version = "0.1.0"
description = ""
authors = ["gsinibaldi <giancarlosinibaldi@ufm.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
validators = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
