[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["gsinibaldi <giancarlosinibaldi@ufm.edu>"]
description = ""
name = "proyecto-final-programacion"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
validators = "^0.15.0"
[tool.poetry.dev-dependencies]
